--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My playlist</h1>
+	<div class="player">
+		<div class="player_one">
+			<h2>Now Playing...</h2>
+			<video width="100%" controls>
+				<source src="https://www.w3schools.com/tags/movie.mp4"type="video/mp4">
+			</video>
+		</div>
+		<div class="player_two">
+			<h2>Mp3 songs</h2>
+			<audio controls>
+				<source src=""type="audio/mp3">
+			</audio>
+				<ul>
+					<li><a href="">Song 1</a></li>
+					<li><a href="">Song 2</a></li>
+					<li><a href="">Song 3</a></li>
+					<li><a href="">Song 4</a></li>
+					<li><a href="">Song 5</a></li>
+				</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
